--- a/src/css/home.css
+++ b/src/css/home.css
@@ -68,6 +68,7 @@ main section:first-child::after{
   main{
     flex-direction: column;
     align-items: flex-start;
+    padding: 30px 20px;
   }
   
   main > section{
